--- a/app/views/PlanTravel/trip.scala.html
+++ b/app/views/PlanTravel/trip.scala.html
@@ -7,14 +7,14 @@
     <div id="trip@tripNumber" class="accordion-collapse collapse @if(open){ in }">
         <div class="trip-content">
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Departure Location </label>
                     <input class="form-control input-lg" type="text" id="name" name="depart_location" value="@tripRequest.map(_.depart_location)" placeholder="e.g San Diego">
                 </div>
             </div>
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
                 <div class="col-sm-6 form-group">
                     <label for="name"> Departure Date </label>
                     <input class="form-control input-lg" type="text" id="name" name="depart_date" value="@tripRequest.map(_.depart_date)" placeholder="e.g 03/21/2015">
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Favorite Airline Companies </label>
                     <select class="form-control input-lg airline-preferences" type="text"  name="airline" multiple data-content='@routes.Assets.at("json/companies.json")' data-role="tagsinput">
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Arrival Location </label>
                     <input class="form-control input-lg" type="text" id="name" name="arrival_location" value="@tripRequest.map(_.arrival_location)" placeholder="e.g New York">
@@ -43,7 +43,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
 
                 <label class="col-sm-12" for="name"> Additional Transportation </label>
 
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="col-md-offset-0 row">
 
                 <div class="col-sm-4 form-group">
                     <label class=" checkbox">
