--- a/app/views/PlanTravel/tripReturn.scala.html
+++ b/app/views/PlanTravel/tripReturn.scala.html
@@ -1,6 +1,6 @@
 @(clientRequest:Option[Client_Request] = None)(implicit user:Option[User])
 
-<a href="#tripReturn" class="accordion-toggle open " data-toggle="collapse">Return</a>
+<div href="#tripReturn" class="accordion-toggle open " data-toggle="collapse">Return</div>
 
 <div id="tripReturn" class="accordion-collapse collapse in">
 
