--- a/app/views/PlanTravel/tripReturn.scala.html
+++ b/app/views/PlanTravel/tripReturn.scala.html
@@ -14,7 +14,7 @@
 	<div class="row">
 	    <div class="col-sm-6 form-group">
 	        <label for="ret_date"> Return Date </label>
-	        <input class="form-control input-lg" type="text" id="ret_date" name="ret_date" value="@clientRequest.map(_.ret_location)" placeholder="09/11/2015">
+	        <input class="form-control input-lg" type="text" id="ret_date" name="ret_date" value="@clientRequest.map(_.ret_date)" placeholder="09/11/2015">
 	    </div>
 	    <div class="col-sm-6 form-group">
 	        <label for="ret_time"> Return Time </label>
