fixing form ids adding the add travel plan button to the dasboard UI

--- a/app/views/Dashboard/dashboard.scala.html
+++ b/app/views/Dashboard/dashboard.scala.html
@@ -37,7 +37,10 @@
                     <section class="trips-section col-md-8 with-margin">
 
                         <div class="row ">
-                            <div class="col-md-8 col-md-offset-2">
+                            <div class="col-md-2">
+                                <a href="@routes.Application.travelPlanner()"><div class="btn btn-grove-one btn-lg"><i class="glyphicons plus"></i> Add travel request </div></a>
+                            </div>
+                            <div class="col-md-offset-2 col-md-8">
                                 <input type="search" class="form-control input-lg search-input" placeholder="Search travel requests">
                             </div>
                         </div>
@@ -68,6 +71,7 @@
                                            }
                                        </td>
                                    </tr>
+
                                }
 
                                </tbody>
