--- a/app/views/PlanTravel/trip.scala.html
+++ b/app/views/PlanTravel/trip.scala.html
@@ -9,20 +9,20 @@
 
             <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
-                    <label for="name"> Departure Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="depart_location" value="@tripRequest.map(_.depart_location)" placeholder="e.g San Diego - CA">
+                    <label for="depart_location"> Departure Location </label>
+                    <input class="form-control input-lg" type="text" id="depart_location" name="depart_location" value="@tripRequest.map(_.depart_location)" placeholder="e.g San Diego - CA">
                 </div>
             </div>
 
             <div class="col-md-offset-0 row">
                 <div class="col-sm-6 form-group">
                     <label for="name"> Departure Date </label>
-                    <input class="form-control input-lg" type="text" id="name" name="depart_date" value="@tripRequest.map(_.depart_date)" placeholder="e.g 03/21/2015">
+                    <input class="form-control input-lg" type="text" id="depart_date" name="depart_date" value="@tripRequest.map(_.depart_date)" placeholder="e.g 03/21/2015">
                 </div>
 
                 <div class="col-sm-6 form-group">
                     <label for="name"> Departure Time </label>
-                    <input class="form-control input-lg" type="text" id="name" name="depart_time" value="@tripRequest.map(_.depart_time)" placeholder="e.g 03:40pm">
+                    <input class="form-control input-lg" type="text" id="depart_time" name="depart_time" value="@tripRequest.map(_.depart_time)" placeholder="e.g 03:40pm">
                 </div>
             </div>
 
