--- a/app/views/PlanTravel/trip.scala.html
+++ b/app/views/PlanTravel/trip.scala.html
@@ -10,26 +10,26 @@
             <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="depart_location"> Departure Location </label>
-                    <input class="form-control input-lg" type="text" id="depart_location" name="depart_location" value="@tripRequest.map(_.depart_location)" placeholder="e.g San Diego - CA">
+                    <input class="form-control input-lg" type="text" id="depart_location" name="trips[@{tripNumber - 1}].depart_location" value="@tripRequest.map(_.depart_location)" placeholder="e.g San Diego - CA">
                 </div>
             </div>
 
             <div class="col-md-offset-0 row">
                 <div class="col-sm-6 form-group">
                     <label for="name"> Departure Date </label>
-                    <input class="form-control input-lg" type="text" id="depart_date" name="depart_date" value="@tripRequest.map(_.depart_date)" placeholder="e.g 03/21/2015">
+                    <input class="form-control input-lg" type="text" id="depart_date" name="trips[@{tripNumber - 1}].depart_date" value="@tripRequest.map(_.depart_date)" placeholder="e.g 03/21/2015">
                 </div>
 
                 <div class="col-sm-6 form-group">
                     <label for="name"> Departure Time </label>
-                    <input class="form-control input-lg" type="text" id="depart_time" name="depart_time" value="@tripRequest.map(_.depart_time)" placeholder="e.g 03:40pm">
+                    <input class="form-control input-lg" type="text" id="depart_time" name="trips[@{tripNumber - 1}].depart_time" value="@tripRequest.map(_.depart_time)" placeholder="e.g 03:40pm">
                 </div>
             </div>
 
             <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Favorite Airline Companies </label>
-                    <select class="form-control input-lg airline-preferences" type="text"  name="airline" multiple data-content='@routes.Assets.at("json/companies.json")' data-role="tagsinput">
+                    <select class="form-control input-lg airline-preferences" type="text"  name="trips[@{tripNumber - 1}].airline" multiple data-content='@routes.Assets.at("json/companies.json")' data-role="tagsinput">
                         <!-- TODO -->
                     </select>
                 </div>
@@ -38,7 +38,7 @@
             <div class="col-md-offset-0 row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Arrival Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="arrival_location" value="@tripRequest.map(_.arrival_location)" placeholder="e.g New York - NY">
+                    <input class="form-control input-lg" type="text" id="name" name="trips[@{tripNumber - 1}].arrival_location" value="@tripRequest.map(_.arrival_location)" placeholder="e.g New York - NY">
                 </div>
             </div>
 
@@ -50,22 +50,22 @@
                 <div class="col-sm-4 form-group">
 
                     <label class="radio">
-                        <input @if(tripRequest.map(_.rental)){checked} class="additional-transportation rental display-trigger" type="radio" value="rental" name="additional_transportation" data-display-trip-form=".form-group.preferred-rental-company" >
+                        <input @if(tripRequest.map(_.rental)){checked} class="additional-transportation rental display-trigger" type="radio" value="rental" name="trips[@{tripNumber - 1}].additional_transportation" data-display-trip-form=".form-group.preferred-rental-company" >
                             Rental
                     </label>
 
                     <label class="radio">
-                        <input @if(tripRequest.map(_.taxi)){checked} class="additional-transportation taxi" type="radio" value="taxi" name="additional_transportation">
+                        <input @if(tripRequest.map(_.taxi)){checked} class="additional-transportation taxi" type="radio" value="taxi" name="trips[@{tripNumber - 1}].additional_transportation">
                             Taxi
                     </label>
 
                     <label class="radio">
-                        <input @if(tripRequest.map(_.shuttle)){checked} class="additional-transportation shuttle" type="radio" value="shuttle"  name="additional_transportation" >
+                        <input @if(tripRequest.map(_.shuttle)){checked} class="additional-transportation shuttle" type="radio" value="shuttle"  name="trips[@{tripNumber - 1}].additional_transportation" >
                             Shuttle
                     </label>
 
                     <label class="radio">
-                        <input @if(!tripRequest.exists{_.isThereAdditionalTransportation}){checked} class="additional-transportation none" type="radio" value="none" name="additional_transportation" >
+                        <input @if(!tripRequest.exists{_.isThereAdditionalTransportation}){checked} class="additional-transportation none" type="radio" value="none" name="trips[@{tripNumber - 1}].additional_transportation" >
                             No, thanks.
                     </label>
 
@@ -73,7 +73,7 @@
 
                 <div class="col-sm-8 form-group preferred-rental-company temp-hide">
                     <label for="name"> Preferred Rental Companies</label>
-                    <select class="form-control input-lg" type="text" name="pref_rental" data-content='@routes.Assets.at("json/companies.json")' multiple data-role="tagsinput"></select>
+                    <select class="form-control input-lg" type="text" name="trips[@{tripNumber - 1}].pref_rental" data-content='@routes.Assets.at("json/companies.json")' multiple data-role="tagsinput"></select>
                 </div>
             </div>
 
@@ -81,17 +81,17 @@
 
                 <div class="col-sm-4 form-group">
                     <label class=" checkbox">
-                        <input class="book-hotel display-trigger" type="checkbox" name="hotel" data-display-trip-form=".hotel-preferences"  @if(tripRequest.exists(_.hotel)){checked}>
+                        <input class="book-hotel display-trigger" type="checkbox" name="trips[@{tripNumber - 1}].hotel" data-display-trip-form=".hotel-preferences"  @if(tripRequest.exists(_.hotel)){checked}>
                            Book a hotel?
                     </label>
                 </div>
 
                 <div class="col-sm-8 form-group hotel-preferences @if(!tripRequest.exists(_.hotel)){temp-hide}">
                     <label for="name"> Checkout Date </label>
-                    <input class="form-control input-lg" type="text" name="checkout_date" value="" placeholder="e.g 03/24/2015">
+                    <input class="form-control input-lg" type="text" name="trips[@{tripNumber - 1}].checkout_date" value="" placeholder="e.g 03/24/2015">
 
                     <label class="checkbox">
-                        <input class="" type="checkbox" name="hotel-meal" value="">
+                        <input class="" type="checkbox" name="trips[@{tripNumber - 1}].hotel_meal" value="">
                             Must serve meal
                     </label>
                 </div>
