--- a/app/views/TravelPlanResponse/flight.scala.html
+++ b/app/views/TravelPlanResponse/flight.scala.html
@@ -9,26 +9,40 @@
         <div class="trip-content">
 
             <div class="row">
-                <div class="col-md-6 form-group">
+                <div class="col-md-12 form-group">
                     <label for="name"> Departure Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="depart_location" value="" placeholder="">
-                </div>
-
-                <div class="col-md-6 form-group">
-                    <label for="name"> Arrival Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="arrival_location" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="depart_location" name="depart_location" value="" placeholder="">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Date </label>
-                    <input class="form-control input-lg" type="text" id="name" name="date" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="depart_date" name="depart_date" value="" placeholder="">
                 </div>
 
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Time </label>
-                    <input class="form-control input-lg" type="text" id="name" name="time" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="depart_time" name="depart_time" value="" placeholder="">
+                </div>
+            </div>
+
+            <div class="row">
+		        <div class="col-md-12 form-group">
+		            <label for="name"> Arrival Location </label>
+		            <input class="form-control input-lg" type="text" id="arrival_location" name="arrival_location" value="" placeholder="">
+		        </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 form-group">
+                    <label for="name"> Arrival Date </label>
+                    <input class="form-control input-lg" type="text" id="arrival_date" name="arrival_date" value="" placeholder="">
+                </div>
+
+                <div class="col-md-6 form-group">
+                    <label for="name"> Arrival Time </label>
+                    <input class="form-control input-lg" type="text" id="arrival_time" name="arrival_time" value="" placeholder="">
                 </div>
             </div>
 
